YH-71: fixed product-details-menu alignment

--- a/src/app/component/product-details/product-details.component.css
+++ b/src/app/component/product-details/product-details.component.css
@@ -19,7 +19,7 @@
 
 .product-details-menu {
   margin: 0 auto;
-  height: 60px;
+  padding: 20px;
   background: #E9E9E9;
   color: #E9E9E9;
   vertical-align: center;
@@ -41,6 +41,7 @@
 
 .product-details-menu-item {
   display: inline-block;
+  vertical-align: center;
 
   font-family: Open Sans;
   font-style: normal;
